# photos-desktop

./: .gitignore  README.md  THIRD-PARTY-NOTICES.txt  build-setup.ps1
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: Albums.tsx  App.css  App.tsx  Avatar.tsx  Confirm.tsx  DebugHud.css  DebugHud.tsx  FilterPanel.tsx  Lightbox.css  Lightbox.tsx  Lock.tsx  PhotoGrid.tsx  PhotoViewer.css  PhotoViewer.tsx  Photos.css  Photos.tsx  ProfileMenu.tsx  Settings.css  Settings.tsx  Shared.tsx  Titlebar.tsx  TrayPopup.css  TrayPopup.tsx  Upload.tsx  i18n.tsx  icons.tsx  main.tsx  rpc.ts  tags.ts  thumbStore.ts  useSelection.tsx  useThumbnails.ts  useUploads.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: autostart.rs  cloud_mount.rs  data_format.rs  file_assoc.rs  lib.rs  local_file.rs  local_folder.rs  main.rs  secure_store.rs  upload_frame.rs
app/src/components/: AlbumDialogs.tsx  Avatar.tsx  Confirm.tsx  ContextMenu.tsx  DebugHud.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  FilterPanel.tsx  Lightbox.tsx  LocalViewer.tsx  PhotoGrid.tsx  PhotoViewer.tsx  ProfileMenu.tsx  ShareDialog.tsx  Titlebar.tsx  UpdateBanner.tsx  Upload.tsx  VideoControls.tsx  ViewerFilmstrip.tsx  ViewerShell.tsx  icons.tsx
app/src/hooks/: useCloudMedia.ts  useFolderMedia.ts  useOpenFile.ts  useProgressiveImage.ts  useSelection.tsx  useThumbnails.ts  useUploads.ts  useWarmViews.ts
app/src/lib/: download.ts  durations.ts  format.ts  i18n.tsx  lightboxSignal.ts  localFile.ts  mediaTypes.ts  offline.ts  originalStore.ts  previewStore.ts  rpc.ts  tags.ts  theme.ts  thumbStore.ts
app/src/lib/locales/: cs.ts  de.ts  en.ts  es.ts  fr.ts  hu.ts  it.ts  nl.ts  pl.ts  sk.ts  sl.ts
app/src/styles/: AlbumDialogs.css  App.css  Avatar.css  Confirm.css  ContextMenu.css  FilterPanel.css  Lightbox.css  PhotoViewer.css  Photos.css  ProfileMenu.css  Settings.css  ShareDialog.css  TrayPopup.css  UpdateBanner.css  Upload.css  theme.css
app/src/views/: Albums.tsx  Lock.tsx  Photos.tsx  Settings.tsx  Shared.tsx  Trash.tsx  TrayPopup.tsx  ViewerWindow.tsx
setup/: index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
setup/src/: App.css  App.tsx  main.tsx
setup/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
setup/src-tauri/capabilities/: default.json
setup/src-tauri/icons/: icon.icns
setup/src-tauri/src/: lib.rs  main.rs
sidecar/: build.mjs  package-lock.json  package.json  rpc.test.ts  rpc.ts  scrub.test.ts  scrub.ts  server.ts  tsconfig.json  update.ts  vitest.config.ts
sidecar/proton/: albums.ts  api.test.ts  api.ts  crypto.test.ts  crypto.ts  download.test.ts  download.ts  nodes.ts  offline.test.ts  offline.ts  session.ts  sharing.test.ts  sharing.ts  store.test.ts  store.ts  trash.ts  upload.test.ts  upload.ts  vault.test.ts  vault.ts
