[package]
name = "app"
version = "0.1.0"
description = "Photos for Proton, desktop"
authors = ["Akoos"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`  - multiple webviews per window (Proton's captcha refuses iframing).
# `tray-icon` - the system-tray icon so the app runs in the background.
# `image-png` - load the bundled PNG icon for the tray.
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# Single-instance: a second launch focuses the running window instead of starting
# a duplicate copy.
tauri-plugin-single-instance = "2"

# Windows-only: force the tray popup to the foreground on show. Tauri's set_focus
# is blocked by Windows' foreground lock when the app is not already active, so we
# use SetForegroundWindow with the AttachThreadInput trick.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
] }
# Native file / folder picker for the upload dialog.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# In-app encrypted store. Everything lives inside the app directory: an
# AES-256-GCM data key, itself sealed at rest with user-scope DPAPI. No entry is
# created anywhere the system can enumerate (no credential store, no registry).
windows-dpapi = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
