[package]
name = "app"
version = "0.1.0"
description = "Photos for Proton, desktop"
authors = ["Akoos"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`  - multiple webviews per window (Proton's captcha refuses iframing).
# `tray-icon` - the system-tray icon so the app runs in the background.
# `image-png` - load the bundled PNG icon for the tray.
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# Single-instance: a second launch focuses the running window instead of starting
# a duplicate copy.
tauri-plugin-single-instance = "2"

# Windows-only: force the tray popup to the foreground on show. Tauri's set_focus
# is blocked by Windows' foreground lock when the app is not already active, so we
# use SetForegroundWindow with the AttachThreadInput trick.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_Com",
  # Convert a plain file back to a placeholder (CfConvertToPlaceholder) on a Win32
  # handle. The cloud-filter crate only offers this through its oplock handle, which
  # CfConvertToPlaceholder rejects with ERROR_INVALID_HANDLE, so we call it directly.
  # (CfConvertToPlaceholder is gated behind Win32_System_IO — it takes an OVERLAPPED.)
  "Win32_Storage_CloudFilters",
  "Win32_System_IO",
] }
# Registers the "Proton Photos" folder as a Windows Cloud Filter sync root so it
# shows in the Explorer navigation pane (files-on-demand comes later).
cloud-filter = "0.0.6"
# cloud-filter's own windows version (0.58): we register the sync root directly
# through it to set InSyncPolicy = PreserveInsyncForSyncEngine (a download-only
# provider needs this so files stay in-sync and can be "freed up"); the crate's typed
# builder cannot express it. Pinned to match the crate's version so the HSTRING types
# unify with SyncRootId::as_hstring().
windows058 = { package = "windows", version = "=0.58.0", features = [
  "Foundation",
  "Storage",
  "Storage_Provider",
  "Security_Cryptography",
] }
# Suspend the main window's WebView2 while the app sits in the tray, so it stops
# holding ~200 MB of renderer memory in the background (state is kept; it resumes on
# show). Tauri's `with_webview` hands us the controller; TrySuspend needs the raw
# WebView2 COM interface. Pinned to Tauri's own version so the interface types unify.
webview2-com = "0.38"
# The `#[implement]` macro used for the TrySuspend completion handler expands to bare
# `windows_core::` paths, so windows-core must be a direct dependency by that name. Same
# version webview2-com-sys binds against, so the COM interface traits unify.
windows-core = "0.61"
# The "show in File Explorer" preference (HKCU), shared with the installer checkbox.
winreg = "0.52"
# Native file / folder picker for the upload dialog.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# In-app encrypted store. Everything lives inside the app directory: an
# AES-256-GCM data key, itself sealed at rest with user-scope DPAPI. No entry is
# created anywhere the system can enumerate (no credential store, no registry).
windows-dpapi = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
