[package]
name = "app"
version = "0.2.0-beta.1"
description = "Photos for Proton, desktop"
authors = ["Akoos"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The shipped executable's filename. Without this the binary is named after the
# package and lands as `app.exe`, which is what a user sees in Task Manager's details
# and in the install folder: a generic name that says nothing about what it is or who
# it came from. The package stays `app` so no module path or crate name moves with it.
#
# `path` is not optional here. Cargo only infers `src/main.rs` for a bin target named
# after the package; any other name sends it looking for `src/bin/<name>.rs`.
[[bin]]
name = "photosforproton"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable`      - multiple webviews per window (Proton's captcha refuses iframing).
# `tray-icon`     - the system-tray icon so the app runs in the background.
# `image-png`     - load the bundled PNG icon for the tray.
# `protocol-asset`- lets the webview read one staging folder from disk, which is how the
#                   viewer shows a full-resolution original without sending the whole
#                   file over the JSON-RPC channel. Its reach is the `assetProtocol`
#                   scope in tauri.conf.json, and nothing else.
tauri = { version = "2", features = ["unstable", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
# Single-instance: a second launch focuses the running window instead of starting
# a duplicate copy.
tauri-plugin-single-instance = "2"

# Windows-only: force the tray popup to the foreground on show. Tauri's set_focus
# is blocked by Windows' foreground lock when the app is not already active, so we
# use SetForegroundWindow with the AttachThreadInput trick.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_Com",
  # WIC, the imaging component Windows itself decodes with. It is how a local HEIC
  # reaches the viewer without this app carrying a codec of its own: whatever the OS
  # can open, the viewer can show, and whatever it cannot is reported as such rather
  # than shipped around. StructuredStorage comes with it because the encoder hands
  # back its options as an IPropertyBag2.
  "Win32_Graphics_Imaging",
  "Win32_System_Com_StructuredStorage",
  # EXIF records a capture time as a bare wall clock with no zone, so turning one into
  # an instant needs the OS's own rules for that date (DST included).
  "Win32_System_Time",
  # Convert a plain file back to a placeholder (CfConvertToPlaceholder) on a Win32
  # handle. The cloud-filter crate only offers this through its oplock handle, which
  # CfConvertToPlaceholder rejects with ERROR_INVALID_HANDLE, so we call it directly.
  # (CfConvertToPlaceholder is gated behind Win32_System_IO — it takes an OVERLAPPED.)
  "Win32_Storage_CloudFilters",
  "Win32_System_IO",
  # GetFileAttributesExW: read a placeholder's attributes WITHOUT opening it.
  # std::fs::metadata opens the file to stat it, and to the Cloud Filter driver an
  # open that is not marked no-recall is a data access, so it hydrates the file.
  "Win32_Storage_FileSystem",
  # SHChangeNotify, so a file association switched on or off in Settings reaches
  # Explorer's "Open with" straight away instead of after a sign-out, and
  # ShellExecuteW to hand the default-apps page to the shell. Also
  # IShellItemImageFactory, which is how a video reaches Proton with a thumbnail:
  # the shell hands back the picture Explorer itself shows for that file, so no
  # video decoder has to ship here to get one.
  "Win32_UI_Shell",
  # IShellItem2::GetUInt32/GetUInt64, which is how a video's length and frame size
  # reach the upload: the shell answers from the same item the picture comes off, so
  # no media decoder ships here for that either.
  "Win32_UI_Shell_PropertiesSystem",
  # IShellItemImageFactory::GetImage returns its picture as an HBITMAP, and the
  # windows crate gates that one method behind the GDI feature that names the type.
  "Win32_Graphics_Gdi",
] }
# Registers the "Proton Photos" folder as a Windows Cloud Filter sync root so it
# shows in the Explorer navigation pane (files-on-demand comes later).
# Vendored 0.0.6 (see vendor/cloud-filter): upstream's callback trampolines
# `.unwrap()` the failure report to the OS, which aborts the process on the FFI
# thread when a download fails and the OS has already dropped the request. The
# local copy reports the failure without aborting; nothing else is changed.
cloud-filter = { path = "vendor/cloud-filter" }
# cloud-filter's own windows version (0.58): we register the sync root directly
# through it to set InSyncPolicy = PreserveInsyncForSyncEngine (a download-only
# provider needs this so files stay in-sync and can be "freed up"); the crate's typed
# builder cannot express it. Pinned to match the crate's version so the HSTRING types
# unify with SyncRootId::as_hstring().
windows058 = { package = "windows", version = "=0.58.0", features = [
  "Foundation",
  "Storage",
  "Storage_Provider",
  "Security_Cryptography",
] }
# Suspend the main window's WebView2 while the app sits in the tray, so it stops
# holding ~200 MB of renderer memory in the background (state is kept; it resumes on
# show). Tauri's `with_webview` hands us the controller; TrySuspend needs the raw
# WebView2 COM interface. Pinned to Tauri's own version so the interface types unify.
webview2-com = "0.38"
# The `#[implement]` macro used for the TrySuspend completion handler expands to bare
# `windows_core::` paths, so windows-core must be a direct dependency by that name. Same
# version webview2-com-sys binds against, so the COM interface traits unify.
windows-core = "0.61"
# The "show in File Explorer" preference (HKCU), shared with the installer checkbox.
winreg = "0.52"
# Native file / folder picker for the upload dialog.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# A local photo's own details, read here rather than in the sidecar: opening a file
# from Explorer must work with no vault and no sign-in, so nothing on that path may
# depend on the SDK process being up.
#
# Both are header-only readers, which is the point: neither ever decodes an image, so
# a 100 MP file costs the same as a small one and the memory ceiling stays flat.
# `imagesize` reads the dimensions straight out of the container header and has no
# dependencies of its own; `kamadak-exif` is the de-facto EXIF reader for Rust, is
# pure safe Rust, and parses the EXIF block for every container that matters here
# (JPEG, PNG, WebP, TIFF, HEIF). The `image` crate would do both, but it pulls a large
# decoder tree to answer a question that lives in the first few kilobytes.
imagesize = "0.13"
kamadak-exif = "0.6"

# In-app encrypted store. Everything lives inside the app directory: an
# AES-256-GCM data key, itself sealed at rest with user-scope DPAPI. No entry is
# created anywhere the system can enumerate (no credential store, no registry).
windows-dpapi = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
