[package]
name = "setup"
version = "0.2.0-beta.1"
description = "Photos for Proton installer"
authors = ["Akoos"]
edition = "2021"

[lib]
# Named without "setup"/"install" so `cargo test`'s binary is not flagged by
# Windows installer-detection (which would demand elevation, os error 740).
name = "wizard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Opens the About links in the user's real browser rather than this WebView.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
mslnk = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Unregister the "Proton Photos" cloud sync root on uninstall (the API call notifies
# the shell so Explorer drops the nav-pane entry; a raw registry delete does not).
cloud-filter = "0.0.6"
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }
